# app-service-demo

./: .gitignore  README.md  enums.py  name_later.py  pyproject.toml  requirements.txt
app_list/: __init__.py  bigcommerce.py  config.py  models.py  shopify_app.py
app_list/management/commands/: chat_simulation.py
app_list/migrations/: 0001_initial.py  0002_create_shopify.py  0003_create_bigcommerce.py
config/: asgi.py  settings.py  urls.py  wsgi.py
templates/: ecommerce.py
